fix(food): disallow adding ingredients that already exist

--- a/src/app/components/meal-edit-modal/meal-edit-modal.component.html
+++ b/src/app/components/meal-edit-modal/meal-edit-modal.component.html
@@ -47,6 +47,7 @@
             formControlName="ingredients"
             class="meal-edit-modal__ingredients-input"
             list="ingredients-list"
+            type="search"
           />
           <datalist *ngIf="recentIngredients" id="ingredients-list">
             <option
