Rework shopping list, add removeal and adding function, Add meal ingredient saving, Fix meal modal not refreshing

--- a/src/app/components/meal-edit-modal/meal-edit-modal.component.html
+++ b/src/app/components/meal-edit-modal/meal-edit-modal.component.html
@@ -107,6 +107,15 @@
       >
         <img src="../../../assets/check-solid.svg" width="20" />
       </button>
+      <button
+        *ngIf="meal.id"
+        type="button"
+        [disabled]="!mealForm.valid"
+        (click)="deleteMeal()"
+        class="meal-edit-modal__meal-delete-btn"
+      >
+        <img src="../../../assets/trash-can-solid.svg" width="20" />
+      </button>
     </form>
   </div>
 </div>
