feat(food): implement draggability

--- a/src/app/components/meal-edit-modal/meal-edit-modal.component.css
+++ b/src/app/components/meal-edit-modal/meal-edit-modal.component.css
@@ -21,8 +21,8 @@
   height: 17rem;
   left: 0;
   position: absolute;
-  right: 0;
   top: 0;
+  width: 17rem;
 }
 
 .meal-edit-modal__img-upload-input {
