--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="home-col-1">
   <app-card cardTitle="Climate" class="home-col-1-card-1"></app-card>
   <app-card cardTitle="Placeholder" class="home-col-1-card-2"></app-card>
-  <app-card cardTitle="Placeholder" class="home-col-1-card-3"></app-card>
+  <app-card cardTitle="Electricity" class="home-col-1-card-3">
+    <app-electricity-card></app-electricity-card>
+  </app-card>
 </div>
 <div class="home-col-2">
   <app-card cardTitle="Lights"></app-card>
