--- a/src/app/components/views/home/home.component.css
+++ b/src/app/components/views/home/home.component.css
@@ -15,7 +15,7 @@
   display: grid;
   gap: 1rem;
   grid-area: 1 / 1 / 1 / 3;
-  grid-template: repeat(5, 1fr) / repeat(2, 1fr);
+  grid-template: repeat(2, auto) / repeat(2, 1fr);
 }
 
 .home-col-2 {
@@ -25,13 +25,13 @@
 }
 
 .home-col-1-card-1 {
-  grid-area: 1 / 1 / 4 / 2;
+  grid-area: 1 / 1 / 2 / 2;
 }
 
 .home-col-1-card-2 {
-  grid-area: 1 / 2 / 4 / 3;
+  grid-area: 1 / 2 / 2 / 3;
 }
 
 .home-col-1-card-3 {
-  grid-area: 4 / 1 / 6 / 3;
+  grid-area: 2 / 1 / 3 / 3;
 }
